<resources>
    <string name="app_name">GetItDoneOrElseApplication</string>
    <string name="format"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tues">TUES</string>
    <string name="wed">WED</string>
    <string name="thurs">THURS</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="november_2023">November 2023</string>
    <string name="_1">1</string>
    <string name="string"><![CDATA[<-]]></string>
    <string name="weekly">weekly</string>
    <string name="name">Name</string>
    <string name="date" />
    <string name="Date" />
    <string name="time">Time</string>
    <string name="Time" />
    <string name="_10_00">10:00</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="blank">‎ </string>
    <string name="full_name_pre">Full Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_of_user">Terms of User</string>
    <string name="sign_up_button">"        Sign Up         "</string>
    <string name="sign_in">Sign In</string>
    <string name="arrow_placer">→</string>
    <string name="pass">**********</string>
    <string name="or_else">Or else</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logarrow">➜</string>
    <string name="to_sign_up">Sign Up!</string>
    <string name="Gide">Gide</string>
    <string name="dismiss">DISMISS</string>
    <string name="TASK">Take Out Trash</string>
    <string name="MESSAGE">DON\'T FORGET TO DO THE LAUNDRY</string>
    <string name="imageview">imageview</string>
    <string name="exit_button">Exit Button</string>
    <string name="random">RANDOM</string>
    <string name="google">google</string>
    <string name="forgot_password_easily">forgot password?</string>
    <string name="default_web_client_id" />
    <string name="humorous">Humorous</string>
    <string name="alex_dog">alex_dog</string>
	<string name="alex_wants_to_help_remind_you">Alex wants to help remind you</string>
    <string name="description_of_the_image">Description of the image</string>
    <string name="comic3">comic3</string>
    <string name="comic_alex_one">one</string>
    <string name="alex_two">two</string>
    <string name="alex_one">one</string>
    <string name="alex_three">three</string>
    <string name="randomAlex">randomalex</string>

</resources>