<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
     android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom= "20dp"
    android:layout_marginTop= "20dp">
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/format"
        android:onClick= "previousMonthAction"
        android:textColor="@color/black"
        android:background="@null"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/MonthYearTV"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/november_2023"
        android:textSize="20sp"
        android:textAlignment="center"
         />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/forward"
        android:textColor="@color/black"
        android:onClick ="nextMonthAction"
        android:background="@null"
        android:textStyle="bold"
        android:textSize="20sp"/>
</LinearLayout>

   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
       android:orientation="horizontal">

       <TextView
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/sun"
           android:textColor="@color/black"
           android:textAlignment="center"
           android:textSize="16sp"/>
       <TextView
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/mon"
           android:textColor="@color/black"
           android:textAlignment="center"
           android:textSize="16sp"/>
       <TextView
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:text="@string/tues"
       android:textColor="@color/black"
       android:textAlignment="center"
       android:textSize="16sp"/>
       <TextView
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:text="@string/wed"
       android:textColor="@color/black"
       android:textAlignment="center"
       android:textSize="16sp"/>
       <TextView
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:text="@string/thurs"
       android:textColor="@color/black"
       android:textAlignment="center"
       android:textSize="16sp"/>
       <TextView
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/fri"
           android:textColor="@color/black"
           android:textAlignment="center"
           android:textSize="16sp"/>
       <TextView
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/sat"
           android:textColor="@color/black"
           android:textAlignment="center"
           android:textSize="16sp"/>



       />
</LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>